# DCSBiosPi

./: .gitignore  README.md  multicast_to_pty.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: epaper_vor_ils.py
src/dcsbpi/: __init__.py  cli.py  client.py  dcsb_parser.py  dcsbios.py  epaper_client.py  gpio_client.py  mapping.example.yaml  show_vor_ils.py  udp_serial_bridge.py
